--- a/app/src/main/res/layout/adapter_item_series_seasons.xml
+++ b/app/src/main/res/layout/adapter_item_series_seasons.xml
@@ -12,8 +12,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:minWidth="108dp"
         android:minHeight="192dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:background="@color/colorPrimary" />
@@ -37,10 +39,9 @@
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         android:textColor="@android:color/white"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imgSeriesSeaonsPoster"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/txtSeriesSeaonsNumber"
         app:layout_constraintTop_toBottomOf="@+id/txtSeriesSeaonsNumber"
