--- a/app/src/main/res/layout/fragment_series_episode.xml
+++ b/app/src/main/res/layout/fragment_series_episode.xml
@@ -6,6 +6,15 @@
     android:background="@color/detail_bg"
     tools:context=".ui.SeriesEpisodeFragment">
 
+    <TextView
+        android:id="@+id/txtNoSeason"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycSeasons"
