--- a/app/src/main/res/layout/fragment_series_details.xml
+++ b/app/src/main/res/layout/fragment_series_details.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="@string/cast"
+        android:text="@string/directors"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 
