--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -112,6 +112,8 @@
 
             <include layout="@layout/data_placeholder_layout" />
 
+            <include layout="@layout/data_placeholder_layout" />
+
         </LinearLayout>
 
     </com.facebook.shimmer.ShimmerFrameLayout>
