--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -28,4 +28,7 @@
         android:layout_marginBottom="64dp"
         android:minWidth="72dp"
         android:minHeight="72dp" />
-</FrameLayout>
+
+    <include layout="@layout/bottom_sheet_video" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
