--- a/app/src/main/res/layout/layout_video.xml
+++ b/app/src/main/res/layout/layout_video.xml
@@ -32,26 +32,6 @@
         tools:elevation="10dp" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/txtGoDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/bg_rate"
-        android:drawablePadding="4dp"
-        android:gravity="center"
-        android:paddingStart="10dp"
-        android:paddingTop="8dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="8dp"
-        android:text="@string/go_series_detail"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/txtLike"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/txtLike"
-        tools:elevation="10dp" />
-
-    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/txtLike"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
@@ -90,10 +70,9 @@
         android:id="@+id/shimmer_view_container"
         android:layout_width="match_parent"
         android:layout_height="192dp"
-        android:layout_marginBottom="8dp"
         android:minHeight="192dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/recycImages"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,7 +101,7 @@
         android:id="@+id/recycImages"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="48dp"
         android:minHeight="192dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
