Edited Reviews Layout

--- a/app/src/main/res/layout/activity_series_detail.xml
+++ b/app/src/main/res/layout/activity_series_detail.xml
@@ -156,6 +156,7 @@
             android:paddingRight="16dp">
 
             <RelativeLayout
+                android:id="@+id/lytOpenWeb"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -183,6 +184,7 @@
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/lytOpenChannel"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -204,7 +206,7 @@
                     android:layout_toEndOf="@+id/imageViewWatchLater"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:text="@string/listeye_ekle"
+                    android:text="@string/channel_site"
                     android:textColor="#ffffff"
                     android:textSize="18sp" />
 
