--- a/app/src/main/res/layout/adapter_item_user_reviews.xml
+++ b/app/src/main/res/layout/adapter_item_user_reviews.xml
@@ -1,59 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/review_bg">
+    app:cardCornerRadius="12dp">
 
-    <ImageView
-        android:id="@+id/imgReviewerPhoto"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:minWidth="48dp"
-        android:minHeight="48dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="@color/colorAccent" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/review_bg"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/txtReviewTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/imgReviewerPhoto"
-        app:layout_constraintTop_toTopOf="@+id/imgReviewerPhoto"
-        tools:text="Bu cok güzelmiş" />
+        <TextView
+            android:id="@+id/txtReviewTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            tools:text="Bu cok güzelmiş" />
 
-    <TextView
-        android:id="@+id/txtReviewDetail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:textColor="@android:color/white"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="@+id/txtReviewTitle"
-        app:layout_constraintTop_toBottomOf="@+id/txtReviewTitle"
-        tools:text="by Miraç OZKAN | 10 June 2019" />
+        <TextView
+            android:id="@+id/txtReviewDetail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/txtReviewTitle"
+            app:layout_constraintTop_toBottomOf="@+id/txtReviewTitle"
+            tools:text="by Miraç OZKAN | 10 June 2019" />
 
-    <TextView
-        android:id="@+id/txtReview"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:textColor="@android:color/white"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/txtReviewDetail"
-        app:layout_constraintTop_toBottomOf="@+id/txtReviewDetail"
-        tools:text="mirac mirac mirac mirac mirac mirac mirac mirac mirac mirac mirac miracmi
+        <TextView
+            android:id="@+id/txtReview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/txtReviewDetail"
+            app:layout_constraintTop_toBottomOf="@+id/txtReviewDetail"
+            tools:text="mirac mirac mirac mirac mirac mirac mirac mirac mirac mirac mirac miracmi
          mirac mirac mirac mirac mirac mirac miracmirac mirac mirac mirac mirac mirac mirac mirac
           mirac mirac mirac mirac" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
