--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/black"
-        tools:context=".ui.VideoFragment">
+        tools:context=".ui.fragment.VideoFragment">
 
     <com.google.android.exoplayer2.ui.PlayerView
             android:id="@+id/pvExoPlayer"
