--- a/app/src/main/res/layout/fragment_series_item.xml
+++ b/app/src/main/res/layout/fragment_series_item.xml
@@ -18,6 +18,7 @@
         </com.google.android.exoplayer2.ui.PlayerView>
 
         <include
+                android:id="@+id/layout_video"
                 layout="@layout/layout_video"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
