--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,5 +31,8 @@
         <action
                 android:id="@+id/action_seriesDetailFragment_to_seriesSearchFragment"
                 app:destination="@id/seriesSearchFragment" />
+        <argument
+                android:name="seriesId"
+                app:argType="integer" />
     </fragment>
 </navigation>
